--- a/styles/pages/checkout/checkout.css
+++ b/styles/pages/checkout/checkout.css
@@ -119,6 +119,19 @@
   margin-left: 3px;
 }
 
+.quantity-input {
+  width: 30px;
+}
+
+.quantity-input,
+.save-quantity-link {
+  display: none;
+}
+
+.quantity-label {
+  display: initial;
+}
+
 @media (max-width: 1000px) {
   .delivery-options {
     /* grid-column: 1 means this element will be placed
@@ -208,4 +221,16 @@
 
   margin-top: 11px;
   margin-bottom: 15px;
+}
+
+.is-editing-quantity {
+  .quantity-input,
+  .save-quantity-link {
+    display: initial;
+  }
+
+  .quantity-label,
+  .update-quantity-link {
+    display: none;
+  }
 }
